# projeto-principal

./: .isort.cfg  README.md  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
lista/: settings.py  urls.py
